<resources>
    <string name="app_name">I-L-L</string>
    <string name="password">Password</string>
    <string name="i_l_l">I L L -</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="ill">ILL?</string>
    <string name="ini">INI</string>
    <string name="sign_out">SIGN OUT</string>
</resources>
