<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark"
    tools:context="android.gui.IllActivity">

    <TextView
        android:id="@+id/tv_ill"
        android:layout_width="121dp"
        android:layout_height="81dp"
        android:textSize="60dp"
        android:text="@string/ill"
        android:textColor="@android:color/black"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="37dp"
        android:layout_marginLeft="52dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.221" />

    <Button
        android:id="@+id/b_ini"
        android:layout_width="112dp"
        android:layout_height="84dp"
        android:background="@android:color/holo_blue_dark"
        android:textSize="60sp"
        android:hint="@string/ini"
        android:layout_marginEnd="63dp"
        app:layout_constraintLeft_toRightOf="@+id/tv_ill"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="34dp"
        app:layout_constraintHorizontal_bias="0.162" />

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:text="Times INI'd:"
        android:textColor="@android:color/black"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_ill"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#303F9F"
        android:textSize="80sp"
        tools:text="000000"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toTopOf="@+id/b_share"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_count"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/b_share"
        android:layout_width="239dp"
        android:layout_height="48dp"
        android:textSize="25dp"
        android:text="Share INI count!"
        android:textColor="#303F9F"
        android:background="@android:color/holo_orange_light"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="84dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.503" />

    <Button
        android:id="@+id/b_signout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:background="@android:color/holo_blue_dark"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/b_share"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />


</android.support.constraint.ConstraintLayout>
